src/objects/Provider_Taxonomy__mdt.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality_Code__c</fullName>
        <label>Speciality Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Provider Taxonomy</label>
    <pluralLabel>Provider Taxonomies</pluralLabel>
</CustomObject>